Fixed menu_data.h generation and inclusion in compile.

--- a/components/Esp_menu/CMakeLists.txt
+++ b/components/Esp_menu/CMakeLists.txt
@@ -1,12 +1,15 @@
 # menu/CMakeLists.txt
 idf_component_register(SRCS "Esp_menu.c"
     INCLUDE_DIRS "include" "."
+    PRIV_INCLUDE_DIRS "${CMAKE_CURRENT_BINARY_DIR}"
     REQUIRES esp_lcd driver esp_lvgl_port lvgl button knob)
 
 # Generate the menu header using custom command
 add_custom_command(
     OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/menu_data.h
-    COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/generate_menu_header.py
+    COMMAND python3 ${CMAKE_CURRENT_SOURCE_DIR}/generate_menu_header.py
+            ${CMAKE_CURRENT_SOURCE_DIR}/menu.json
+            ${CMAKE_CURRENT_BINARY_DIR}/menu_data.h
     DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/menu.json
     VERBATIM
 )
