--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "main.c"
                        INCLUDE_DIRS "."
-                       REQUIRES Esp_menu esp_lcd)
+                       REQUIRES Esp_menu esp_lcd nvs_flash)
