--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,12 +1,8 @@
 version: 2
-sphinx:
-  configuration: docs/conf.py
 build:
   os: ubuntu-22.04
-  tools:
-    python: "3.11"
 python:
+  version: 3.11
   install:
-    - requirements: docs/requirements.txt
-conda:
-  environment: docs/environment.yml
+    - method: conda
+      path: docs/.environment.yaml
