--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,8 +1,9 @@
 version: 2
 build:
   os: ubuntu-22.04
+  tools:
+    python: "3.11"
 python:
-  version: 3.11
   install:
     - method: conda
       path: docs/.environment.yaml
