--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,9 +1,7 @@
 version: 2
 build:
   os: ubuntu-22.04
-  tools:
-    python: "3.11"
-python:
-  install:
-    - method: conda
-      path: docs/.environment.yaml
+  commands:
+    - conda env create -f docs/.environment.yaml
+    - conda activate docs
+    - sphinx-build -b html docs/ _build/html
