--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -2,11 +2,10 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.11"
-    conda: "latest"
+    python: "3.11"  # Specify Python version here
 python:
   install:
     - method: conda
-      path: docs/.environment.yaml
+      path: docs/environment.yaml  # Path to your Conda environment YAML file
 sphinx:
   builder: html
