--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,9 +3,7 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.11"
-python:
-  install:
-    - method: conda
-      path: docs/environment.yaml
-sphinx:
-  builder: html
+  commands:
+    - conda env create -f docs/environment.yaml
+    - conda activate docs
+    - sphinx-build -b html docs/ _build/html
