🛠️ Refactor ESP Menu system to simplify configuration, enhance graphics support, and remove deprecated files

--- a/components/esp_menu/CMakeLists.txt
+++ b/components/esp_menu/CMakeLists.txt
@@ -14,12 +14,11 @@ set(requires
     "esp_lcd"
     "button"
     "knob"
+    "nvs_flash"
 )
 
 # Add NVS support if enabled
-if(CONFIG_ESPMENU_ENABLE_NVS)
-    list(APPEND requires "nvs_flash")
-endif()
+# (Now included directly in the requires list)
 
 idf_component_register(
     SRCS ${srcs}
