--- a/examples/basic_menu/CMakeLists.txt
+++ b/examples/basic_menu/CMakeLists.txt
@@ -1,5 +1,6 @@
-idf_project(
-    EXECUTABLE_NAME basic_menu
-    SRCS "main/main.c"
-    COMPONENTS esp_menu
-)
+cmake_minimum_required(VERSION 3.16)
+# Add the parent directory components as available components
+set(EXTRA_COMPONENT_DIRS "../../components")
+
+include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+project(basic_menu)
