--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,59 +1,65 @@
 {
-    "C_Cpp.intelliSenseEngine": "default",
-    "idf.espIdfPath": "/home/phi/esp/v5.4.2/esp-idf",
-    "idf.toolsPath": "/home/phi/.espressif",
-    "idf.pythonInstallPath": "/usr/bin/python",
-    "terminal.integrated.shell.linux": "bash",
-    "terminal.integrated.automationShell.linux": "bash",
-    "terminal.integrated.defaultProfile.linux": "esp-idf-bash",
-    "terminal.integrated.defaultProfile.osx": "esp-idf-bash",
-    "terminal.integrated.defaultProfile.windows": "esp-idf-bash",
-    "idf.openOcdConfigs": [
-        "board/esp32s3-builtin.cfg"
-    ],
-    "idf.customExtraVars": {
-        "IDF_TARGET": "esp32s3"
-    },
-    "idf.flashType": "UART",
-    "idf.port": "/dev/ttyACM0",
-    "terminal.integrated.profiles.linux": {
-        "esp-idf-bash": {
-            "path": "bash",
-            "args": [
-                "-c",
-                "unset IDF_PATH && source $HOME/esp/v5.4.2/esp-idf/export.sh && exec bash"
-            ],
-            "icon": "terminal-bash"
-        }
-    },
-    "terminal.integrated.profiles.osx": {
-        "esp-idf-bash": {
-            "path": "bash",
-            "args": [
-                "-l",
-                "-c",
-                "unset IDF_PATH && source $HOME/esp/v5.4.2/esp-idf/export.sh && exec bash"
-            ],
-            "icon": "terminal-bash"
-        }
-    },
-    "terminal.integrated.profiles.windows": {
-        "esp-idf-bash": {
-            "path": "${env:windir}\\System32\\bash.exe",
-            "args": [
-                "-c",
-                "source ~/esp/v5.4.2/esp-idf/export.sh && exec bash"
-            ],
-            "icon": "terminal-bash"
-        }
-    },
-    "terminal.integrated.env.linux": {
-        "IDF_PATH": "/home/phi/esp/v5.4.2/esp-idf"
-    },
-    "terminal.integrated.env.osx": {
-        "IDF_PATH": "$HOME/esp/v5.4.2/esp-idf"
-    },
-    "terminal.integrated.env.windows": {
-        "IDF_PATH": "%USERPROFILE%\\esp\\v5.4.2\\esp-idf"
+  "C_Cpp.intelliSenseEngine": "default",
+  "idf.espIdfPath": "/home/phi/esp/v5.4.2/esp-idf",
+  "idf.toolsPath": "/home/phi/.espressif",
+  "idf.pythonInstallPath": "/usr/bin/python",
+  "terminal.integrated.shell.linux": "fish",
+  "terminal.integrated.automationShell.linux": "fish",
+  "terminal.integrated.defaultProfile.linux": "esp-idf-fish",
+  "terminal.integrated.defaultProfile.osx": "esp-idf-fish",
+  "terminal.integrated.defaultProfile.windows": "esp-idf-bash",
+  "idf.openOcdConfigs": [
+    "board/esp32s3-builtin.cfg"
+  ],
+  "idf.customExtraVars": {
+    "IDF_TARGET": "esp32s3"
+  },
+  "idf.flashType": "UART",
+  "idf.port": "/dev/ttyACM0",
+  "terminal.integrated.profiles.linux": {
+    "esp-idf-fish": {
+      "path": "fish",
+      "args": [
+        "-c",
+        "set -e IDF_PATH; and source $HOME/esp/v5.4.2/esp-idf/export.fish; and exec fish"
+      ],
+      "icon": "terminal"
     }
+  },
+  "terminal.integrated.profiles.osx": {
+    "esp-idf-fish": {
+      "path": "fish",
+      "args": [
+        "-l",
+        "-c",
+        "set -e IDF_PATH; and source $HOME/esp/v5.4.2/esp-idf/export.fish; and exec fish"
+      ],
+      "icon": "terminal"
+    }
+  },
+  "terminal.integrated.profiles.windows": {
+    "esp-idf-bash": {
+      "path": "${env:windir}\\System32\\bash.exe",
+      "args": [
+        "-c",
+        "source ~/esp/v5.4.2/esp-idf/export.sh && exec bash"
+      ],
+      "icon": "terminal-bash"
+    }
+  },
+  "terminal.integrated.env.linux": {
+    "IDF_PATH": "/home/phi/esp/v5.4.2/esp-idf"
+  },
+  "terminal.integrated.env.osx": {
+    "IDF_PATH": "$HOME/esp/v5.4.2/esp-idf"
+  },
+  "terminal.integrated.env.windows": {
+    "IDF_PATH": "%USERPROFILE%\\esp\\v5.4.2\\esp-idf"
+  },
+  "clangd.path": "/home/phi/.espressif/tools/esp-clang/esp-18.1.2_20240912/esp-clang/bin/clangd",
+  "clangd.arguments": [
+    "--background-index",
+    "--query-driver=/home/phi/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc",
+    "--compile-commands-dir=/home/phi/Programming/GitHub/Esp_menu/build"
+  ]
 }
