--- a/examples/basic_menu/CMakeLists.txt
+++ b/examples/basic_menu/CMakeLists.txt
@@ -1,4 +1,9 @@
 cmake_minimum_required(VERSION 3.16)
+
+# Force Clang compiler usage
+set(CMAKE_C_COMPILER "clang")
+set(CMAKE_CXX_COMPILER "clang++")
+
 # Add the parent directory components as available components
 set(EXTRA_COMPONENT_DIRS "../../components")
 
