--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,7 @@
       "path": "fish",
       "args": [
         "-c",
-        "set -e IDF_PATH; and source $HOME/esp/v5.4.2/esp-idf/export.fish; and set -x CC /home/phi/.espressif/tools/esp-clang/esp-18.1.2_20240912/esp-clang/bin/clang; and set -x CXX /home/phi/.espressif/tools/esp-clang/esp-18.1.2_20240912/esp-clang/bin/clang++; and exec fish"
+        "set -e IDF_PATH; and source $HOME/esp/v5.4.2/esp-idf/export.fish; and exec fish"
       ],
       "icon": "terminal"
     }
