🚧 Add compiler flags to suppress external component warnings in CMake configuration

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "Build Example",
             "type": "shell",
-            "command": "cd ${workspaceFolder}/examples/basic_menu && source /home/phi/esp/v5.4.2/esp-idf/export.fish && idf.py build",
+            "command": "cd ${workspaceFolder}/examples/basic_menu && source /home/phi/esp/v5.4.2/esp-idf/export.fish && idf.py build -DCMAKE_C_FLAGS='-Wno-logical-not-parentheses' -DCMAKE_CXX_FLAGS='-Wno-logical-not-parentheses'",
             "group": {
                 "kind": "build",
                 "isDefault": true
