🔧 Update compiler flag handling to use idf_build_set_property for suppressing warnings

--- a/examples/basic_menu/CMakeLists.txt
+++ b/examples/basic_menu/CMakeLists.txt
@@ -3,9 +3,9 @@ cmake_minimum_required(VERSION 3.16)
 # Add the parent directory components as available components
 set(EXTRA_COMPONENT_DIRS "../../components")
 
-# Add compiler flags to suppress external component warnings
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-logical-not-parentheses")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-logical-not-parentheses")
-
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+
 project(basic_menu)
+
+# Set global compiler flags to suppress external component warnings
+idf_build_set_property(COMPILE_OPTIONS "-Wno-logical-not-parentheses" APPEND)
