--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,7 @@
     "idf.customExtraVars": {
         "IDF_TARGET": "esp32s3"
     },
-    "idf.flashType": "JTAG",
+    "idf.flashType": "UART",
     "idf.port": "/dev/ttyACM0",
     "terminal.integrated.profiles.linux": {
         "esp-idf-fish": {
