🛠️ Fix accidental addition of extraneous text in CMake configuration

--- a/examples/basic_menu/CMakeLists.txt
+++ b/examples/basic_menu/CMakeLists.txt
@@ -8,4 +8,4 @@ include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(basic_menu)
 
 # Set global compiler flags to suppress external component warnings
-    idf_build_set_property(COMPILE_OPTIONS "-Wno-logical-not-parentheses" APPEND)
+    idf_build_set_property(COMPILE_OPTIONS "-Wno-logical-not-parentheses" APPEND)the simplified menu
